# qa-auto-engineer-python-project-241

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pytests.yml
gendiff/: cli.py  generate_diff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/test_data/: result_json.json
