[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]

[tool.coverage.run]
relative_files = true
